# GameJanina2026

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  level.json  level_backup.json  one_prompt_to_save_us_all.txt  seraqsalvou.json
editor/: Cargo.toml
editor/src/: app.rs  classification.rs  constants.rs  editor.rs  geometry.rs  id.rs  level_io.rs  main.rs  render.rs  sprite_sheet.rs  text_input.rs  types.rs
engine/: Cargo.toml
engine/src/: app.rs  canvas.rs  collision.rs  color.rs  graphics.rs  input.rs  level.rs  lib.rs  math.rs  renderer.rs  text.rs  time.rs
examples/: shapes.rs
game/: Cargo.toml
game/assets/: translations.json
game/src/: animation.rs  chain.rs  collision.rs  gameplay.rs  level.json  loc.rs  main.rs  menu.rs  movable.rs  new.json  player.rs  portal.rs  portal_chain.rs  portals.rs  squeezable.rs  transition.rs
level_format/: Cargo.toml
level_format/src/: lib.rs
slots/: Cargo.toml
slots/src/: main.rs
src/: app.rs  audio.rs
