[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
# juni is used only as a *library* for the level data types (`Level`, `Shape`,
# `SpriteInstance`, …) and their serde IO. The editor no longer runs juni's
# game loop — it is a standalone egui/eframe desktop app.
juni = { path = "../engine" }
# PNG loading/cropping for sprites and the spritesheet/tileset cutter.
image = { version = "0.25", default-features = false, features = ["png"] }
# Immediate-mode GUI + native windowing. Use the wgpu (Vulkan) backend rather
# than the default glow/GLES one, which segfaults during context init on this
# project's Wayland/NVIDIA setup (see CLAUDE.md).
eframe = { version = "0.35", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
egui = "0.35"
# Native file picker for opening/saving levels and loading spritesheets.
egui-file-dialog = "0.14"
