[package]
name = "juni"
version = "0.1.0"
edition = "2021"

[lib]
name = "juni"
path = "src/lib.rs"

[dependencies]
winit = { version = "0.30.12" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
wgpu = { version = "29" }
pollster = { version = "0.4.0" }
glam = { version = "0.33" }
bytemuck = { version = "1", features = ["derive"] }
web-time = { version = "1.1" }
# Image decoding for textures. `default-features = false` drops the `rayon`
# (multithreading) feature — which misbehaves on single-threaded wasm — and the
# long list of codecs we don't use; we enable only PNG.
image = { version = "0.25", default-features = false, features = ["png"] }
# Audio. `wav` is the RIFF/WAV container reader; `pcm` is the codec that decodes
# the raw PCM samples inside it (a Microsoft-PCM .wav needs both). kira's `cpal`
# backend works on every target — on wasm it drives the Web Audio API (the cpal
# `wasm-bindgen` feature, enabled below for that target).
kira = { version = "0.12.1", default-features = false, features = ["cpal", "wav", "pcm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
# `console` for the direct FPS readout (see time.rs).
web-sys = { version = "0.3", features = ["console"] }
# Turn on cpal's WebAudio backend so kira produces sound in the browser. The
# AudioContext starts suspended and the browser resumes it on the first user
# gesture (e.g. the click that plays a sound).
cpal = { version = "0.17", features = ["wasm-bindgen"] }
# Use the WebGL2 backend on the web. It is supported by every modern browser,
# whereas WebGPU is still gated/experimental in many of them — without this the
# build traps with "Could not get an adapter" on browsers lacking WebGPU.
wgpu = { version = "29", features = ["webgl"] }
