[package]
name = "game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
# The engine. All graphics/audio/input/wasm plumbing lives here; the game only
# implements the `Game` trait and calls `juni::run`.
juni = { path = "../engine" }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
